--- a/index.html
+++ b/index.html
@@ -5,9 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <script src="https://kit.fontawesome.com/19b5078a53.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>Bhromaon</title>
 </head>
-<body>
-    
-</body>
+    <body>
+        <header>
+            <div class="header__image">
+                <img src="./images/back_img_header.jpg" alt="Mountain view">
+            </div>
+            <div>
+                <h1>BHROMAON</h1>
+                <p class="header__p">Safe Travel Anywhere</p>
+                <div class="header__search-container">
+                    <form action="search">
+                      <input type="text" placeholder="Search.." name="search">
+                      <button class="header__search-btn" type="submit">SEARCH</button>
+                    </form>
+                  </div>
+            </div>
+            <nav class="header__nav">
+                <div>
+                    <a class="header__logolink" href="#">
+                        <h2>BHROMAON</h2>
+                    </a>
+                </div>
+                <div>
+                    <ul class="header__navlist">
+                        <li><a class="header__navitem" href="#">WHO WE ARE</a></li>
+                        <li><a class="header__navitem" href="#">WHAT WE DO</a></li>
+                        <li><a class="header__navitem" href="#">TRAVEL WITH US</a></li>
+                        <li><a class="header__navitem" href="#">CONTACT US</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+
+        <main>
+            <div class="container__grid">
+
+            </div>
+        </main>
+
+        <footer>
+            <div class="footer">            
+                <div>
+                    <h2 class="footer__h2">BHROMAON</h2>
+                    <p class="footer__p">Safe Travel Anywhere</p>
+                </div>
+                <div class="footer__icons"> 
+                    <a class="footer__some-icons" href="https://facebook.com"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></a>
+                    <a class="footer__some-icons" href="https://twitter.com"><i class="fa-brands fa-twitter twitter" style="color: #ffffff;"></i></a>
+                    <a class="footer__some-icons" href="https://linkedin.com"><i class="fa-brands fa-linkedin-in" style="color: #5474FD;"></i></a>
+                    <a class="footer__some-icons" href="https://youtube.com"><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
+                    <a class="footer__some-icons" href="https://instagram.com"><i class="fa-brands fa-pinterest" style="color: #ffffff;"></i></a>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
