add header search section - html + scss. no img

--- a/index.html
+++ b/index.html
@@ -14,20 +14,30 @@
             <div class="header__image">
                 <img src="./images/back_img_header.jpg" alt="Mountain view">
             </div>
-            <div>
-                <h1>BHROMAON</h1>
-                <p class="header__p">Safe Travel Anywhere</p>
+            <div class="header">
+                <div>
+                    <h1 class="header__h1">BHROMAON</h1>
+                    <p class="header__p">Safe Travel Anywhere</p>
+                </div>
                 <div class="header__search-container">
                     <form action="search">
-                      <input type="text" placeholder="Search.." name="search">
-                      <button class="header__search-btn" type="submit">SEARCH</button>
+                      <input type="text" placeholder="Search Your Travel Destination" name="search">
+                      <span><button class="header__search-btn" type="submit">SEARCH</button></span>
                     </form>
-                  </div>
+                </div>
+                <div class="header__scroll">
+                    <p class="header__p2">Scroll Down</p>
+                </div>
+                <div class="header__scroll-icon">
+                    <svg>
+                        <use href="./images/scroll.svg#scroll-icon"></use>
+                    </svg>
+                </div>
             </div>
             <nav class="header__nav">
                 <div>
                     <a class="header__logolink" href="#">
-                        <h2>BHROMAON</h2>
+                        <h2 class="header__h2">BHROMAON</h2>
                     </a>
                 </div>
                 <div>
