--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 </head>
     <body>
         <header>
-            <div class="header__image">
-                <img src="./images/back_img_header.jpg" alt="Mountain view">
-            </div>
-            <div class="header">
+            <div class="header__img-container">
                 <div>
                     <h1 class="header__h1">BHROMAON</h1>
                     <p class="header__p">Safe Travel Anywhere</p>
