add html section1-5 and styles section1-5.scss.

--- a/index.html
+++ b/index.html
@@ -49,9 +49,89 @@
         </header>
 
         <main>
-            <div class="container__grid">
-
+            <div>
+                <section class="container__grid section1">
+                    <card class="card1">
+                        <h3 class="card1__h3">Why Choose Us</h3>
+                        <p class="card1__p">Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee</p> 
+                        <p class="card1__p">Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.</p>
+                        <button class="card1__btn">EXPLORE PLACES</button>
+                    </card>
+                    <div class="section1__img1">
+                        <img src="images/front_img1_section1.jpg" alt="House by the sea">
+                    </div>
+                    <div class="section1__img2">
+                        <img src="images/front_img2_section1.jpg" alt="Mountain view">
+                    </div>
+                </section>
             </div>
+
+            <div>
+                <section class="section2">
+                    <div class="section2__icon">
+                        <svg>
+                            <use href="./images/magnifyingglass.svg#magnifyingglass-icon"></use>
+                        </svg>
+                    </div>
+                    <div class="section2__icon">
+                        <svg>
+                            <use href="./images/checkmark.svg#checkmark-icon"></use>
+                        </svg>
+                    </div>
+                    <div class="section2__icon">                        
+                        <svg>
+                            <use href="./images/thumbsup.svg#thumbsup-icon"></use>
+                        </svg>
+                    </div>
+                </section>
+            </div>
+
+            <div>
+                <section class="container__grid section3">
+                    <card class="card3">
+                        <h2 class="card3__h2">Spain</h2>
+                        <h3 class="card3__h3">Grand Spain Madrid</h3>
+                        <p class="card3__p">But I must explain to you how all this mistaken 
+                            idea of account to denouncing pleasure and praising pain was account
+                            born and I account will give you a complete account of the system</p>
+                        <button class="card3__btn">BOOK NOW</button>
+                    </card>
+                </section>
+            </div>
+
+            <div>
+                <section class="container__grid section4">
+                    <card class="card4">
+                        <h2 class="card4__h2">Spain</h2>
+                        <h3 class="card4__h3">Grand Spain Madrid</h3>
+                        <p class="card4__p">But I must explain to you how all this mistaken 
+                            idea of account to denouncing pleasure and praising pain was account
+                            born and I account will give you a complete account of the system</p>
+                        <button class="card4__btn">BOOK NOW</button>
+                    </card>
+                </section>
+            </div>
+
+            <div>
+                <section class="container__grid section5">
+                    <div class="card5__h3">
+                        <h3 class="card5__h3">What Our Tourist Say</h3>
+                    </div>
+                    <div class="card5__img">
+                        <img src="images/front_img_section5.jpg" alt="Person at mountain top">
+                    </div>
+                    <card class="card5">
+                        <h2 class="card5__h2">Sam Sumon</h2>
+                        <p class="card5__p">"But I must explain to you how all this 
+                            mistaken idea of account to denouncinpleasure and praising pain  
+                            But I must explain to you how all this mistaken idea of account 
+                            to nai denouncing pleasure and praising pain was account  born and 
+                            I account will give you a complete account of the system was account  
+                            born and I account will give you a nai the complete account of the system</p>
+                    </card>
+                </section>
+            </div>
+
         </main>
 
         <footer>
